--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,14 @@
         "laravel/horizon": "^5.21",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "predis/predis": "^2.2"
+        "predis/predis": "^2.2",
+        "prettus/l5-repository": "^2.9",
+        "spatie/laravel-data": "^3.9",
+        "spatie/laravel-fractal": "^6.0",
+        "spatie/laravel-json-api-paginate": "^1.13",
+        "spatie/laravel-permission": "^5.11",
+        "spatie/laravel-query-builder": "^5.6",
+        "spatie/laravel-route-attributes": "^1.19"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.8",
